fix: tr-hover overlaps some filter buttons on small viewports

--- a/src/sass/base.scss
+++ b/src/sass/base.scss
@@ -347,6 +347,7 @@ select {
   position: relative;
   min-height: 1px;
   padding-left: 15px;
+  z-index: 10;
   /*max-width: 246px;*/
 }
 
